--- a/index.html
+++ b/index.html
@@ -15,28 +15,80 @@
     <body>
 
         <section id="bg-section">
+
             <h1 id="titulo">Calculadora de IMC</h1>
 
-                <p id="tela">ddwdw</p>
-
-            <div class="area-calculo">
+            <form class="formulario">
 
                 <label class="estilo-label" for="nome">Nome:</label>
                 <input type="text" name="nome" id="nome" class="input-estilo" placeholder="Digite seu nome">
 
                 <label class="estilo-label" for="altura"> Altura:</label>
-                <input type="number" name="altu" id="altura" class="input-estilo" placeholder="Digite sua altura">
+                <input type="number" name="altura" id="altura" class="input-estilo" placeholder="Digite sua altura">
 
                 <label class="estilo-label" for="peso">Peso:</label>
                 <input type="number" name="peso" id="peso" class="input-estilo" placeholder="Digite seu peso">
 
-                <input type="button" id="calcular"  value="Calcular" onclick="calcular()">
+                <button id="calcular">Calcular</button>
 
-            </div>
+            </form>
 
             <P>Criado por: <a href="#">Junior Andrade</a></P>
 
         </section>
 
+        <section>
+
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptate suscipit beatae eius. Veniam rerum quos ducimus omnis obcaecati labore inventore, aut, minima beatae tempore accusamus quisquam perspiciatis veritatis totam.</p>
+
+            </div>
+
+                <table>
+                    <thead class="titulo-tabela">
+                        <tr>
+                            <th>IMC</th>
+                            <th>Classificação</th>
+                            <th>Grau</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr class="linhas-tabela">
+                            <td>Menor que (18,5)</td>
+                            <td>MAGREZA</td>
+                            <td>0</td>
+                        </tr>
+
+                        <tr class="linhas-tabela">
+                            <td>Entre (18,5 e 24,9)</td>
+                            <td>NORMAL</td>
+                            <td>0</td>
+                        </tr>
+
+                        <tr class="linhas-tabela">
+                            <td>Entre (25 e 29,9 )</td>
+                            <td>SOBREPESO</td>
+                            <td>1</td>
+                        </tr>
+
+                        <tr class="linhas-tabela">
+                            <td>Entre (30 e 39,9)</td>
+                            <td>OBESIDADE</td>
+                            <td>2</td>
+                        </tr>
+
+                        <tr class="linhas-tabela">
+                            <td>Igual/maior que (40)</td>
+                            <td>OBESIDADE GRAVE</td>
+                            <td>3</td>
+                        </tr>
+
+
+                    </tbody>
+                </table>
+        </section>
+
     </body>
+
 </html>
