Validação  com JS
Esta sendo desenvolvida uma validação com Java Script, para exibir na tabela o status do paciente.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
 
         <section>
 
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptate suscipit beatae eius. Veniam rerum quos ducimus omnis obcaecati labore inventore, aut, minima beatae tempore accusamus quisquam perspiciatis veritatis totam.</p>
-
-            </div>
-
-                <table>
+                <table id="tabela">
                     <thead class="titulo-tabela">
                         <tr>
                             <th>IMC</th>
@@ -54,31 +49,31 @@
                     </thead>
                     <tbody>
 
-                        <tr class="linhas-tabela">
+                        <tr id="magreza">
                             <td>Menor que (18,5)</td>
                             <td>MAGREZA</td>
                             <td>0</td>
                         </tr>
 
-                        <tr class="linhas-tabela">
-                            <td>Entre (18,5 e 24,9)</td>
+                        <tr id="normal">
+                            <td>Entre (18,6 e 24,9)</td>
                             <td>NORMAL</td>
                             <td>0</td>
                         </tr>
 
-                        <tr class="linhas-tabela">
-                            <td>Entre (25 e 29,9 )</td>
+                        <tr id="sobrepeso">
+                            <td>Entre (25 e 29,9)</td>
                             <td>SOBREPESO</td>
                             <td>1</td>
                         </tr>
 
-                        <tr class="linhas-tabela">
+                        <tr id="obesidade">
                             <td>Entre (30 e 39,9)</td>
                             <td>OBESIDADE</td>
                             <td>2</td>
                         </tr>
 
-                        <tr class="linhas-tabela">
+                        <tr id="obesidadeGrave">
                             <td>Igual/maior que (40)</td>
                             <td>OBESIDADE GRAVE</td>
                             <td>3</td>
