exemplo de input de números com ponto decimais
Criei um exemplo  de como devem ser a entrada de dados nos campos do formulários.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculando o IMC</title>
+        <title>Calculadora de IMC</title>
         <link rel="stylesheet" href="css/style.css">
 
 
@@ -51,13 +51,13 @@
                         <div class="formulario">
                             <label class="estilo-label" for="altura"> Altura:</label>
                             <input type="number" name="altura" id="altura" class="input-estilo"
-                            placeholder="Digite sua altura">
+                            placeholder="Digite sua altura (ex: 1,75)">
                         </div>
 
                         <div class="formulario">
                             <label class="estilo-label" for="peso">Peso:</label>
                             <input type="number" name="peso" id="peso" class="input-estilo"
-                            placeholder="Digite seu peso">
+                            placeholder="Digite seu peso (ex: 60,05)">
                         </div>
 
                         <button id="calcular">Calcular</button>
