--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                         <div class="formulario">
                             <label class="estilo-label" for="nome">Nome:</label>
-                            <input type="text" name="nome" id="nome" class="input-estilo" placeholder="Digite seu nome">
+                            <input type="text" name="nome" id="nome" class="input-estilo" autocomplete="off" placeholder="Digite seu nome">
                         </div>
 
                         <div class="formulario">
@@ -63,7 +63,9 @@
                         <button id="calcular">Calcular</button>
                     </form>
 
-                    <img id="image-form" src="imagens/formImage.svg" alt="Exercicio academia">
+                    <div id="imagem-section">
+                        <img id="image-form" src="imagens/formImage.svg" alt="Exercicio academia">
+                    <div>
 
                 </div>
 
